# random

./: .gitignore  README.md  close_rejected.py  prompt.md  pyproject.toml  rand.py  random_dare.py  random_todolist.ipynb  requirements.txt  table.csv
.claude/skills/random-manage/: DESIGN.md  PLAN.md  SKILL.md
.claude/skills/random-manage/evals/: evals.json
.github/workflows/: close_rejected.yml  random.yml
data/: table.csv
random_dare/: close_rejected.py  constants.py  pick.py
